objects/Branch__c.object
<CustomObject>
    <fields>
        <fullName>Branch1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch1</label>
        <referenceTo>Branch1__c</referenceTo>
        <relationshipLabel>Branch</relationshipLabel>
        <relationshipName>Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch1_formula__c</fullName>
        <formula>Branch1__r.NewBranch2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch1 formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch2</label>
        <referenceTo>Branch2__c</referenceTo>
        <relationshipLabel>Branch</relationshipLabel>
        <relationshipName>Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch2_formula__c</fullName>
        <formula>Branch2__r.Branch_Code2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch2 formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch3</label>
        <referenceTo>Branch3__c</referenceTo>
        <relationshipLabel>Branch</relationshipLabel>
        <relationshipName>Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch3_formula__c</fullName>
        <formula>Branch3__r.Branch_Code3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch3 formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <defaultValue>$Label.kcs_dev__dx_api</defaultValue>
        <label>Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula2__c</fullName>
        <formula>IF(Branch2__r.Name !=Null , $Label.kcs_dev__dx_api +  $Label.kcs_dev__dx_api2 ,  Branch3__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula3__c</fullName>
        <formula>TRIM(LEFT( Branch2__r.Name ,
5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula4__c</fullName>
        <formula>Branch2__r.Name  +  TRIM(RIGHT(Branch3__r.Name ,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fromula1__c</fullName>
        <formula>Branch_Code__c +  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fromula1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewFormula1__c</fullName>
        <formula>IF( Branch2__r.Salary__c &gt;= 10000, (Currency__c * 10) / 100, (Currency__c *5) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewFormula1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Dte__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>New Dte</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <defaultValue>UPPER( $Setup.Custom_Test1__c.a__c )</defaultValue>
        <label>New Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Num__c</fullName>
        <defaultValue>$Setup.Field_Trip__Logistics__c.Field_Trip__Batch_Size__c</defaultValue>
        <label>New Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Phone__c</fullName>
        <defaultValue>$User.MobilePhone</defaultValue>
        <label>New Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_text__c</fullName>
        <defaultValue>($Label.kcs_dev__dx_api ) &amp;  ($Label.kcs_dev__dx_api2 )</defaultValue>
        <label>New text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_url__c</fullName>
        <defaultValue>$Organization.GoogleAppsDomain</defaultValue>
        <label>new url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>photos__c</fullName>
        <label>photos</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vsv__c</fullName>
        <formula>$Label.kcs_dev__dx_api  +  $Label.kcs_dev__dx_api2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vsv</label>
        <type>Text</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>AccountQueue_Branch</fullName>
        <filterScope>Queue</filterScope>
        <label>AccountQueue</label>
        <queue>AccountQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NewTest</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Branch1__c</columns>
        <columns>Branch1_formula__c</columns>
        <columns>Branch2__c</columns>
        <columns>Branch2_formula__c</columns>
        <columns>Branch3__c</columns>
        <columns>Branch3_formula__c</columns>
        <columns>Branch_Code__c</columns>
        <columns>Fromula1__c</columns>
        <filterScope>Everything</filterScope>
        <label>NewTest</label>
        <language>en_US</language>
        <sharedTo>
            <group>Test1</group>
            <role>MarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test1_Branch</fullName>
        <filterScope>Queue</filterScope>
        <label>Test1</label>
        <queue>Test1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Branch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch</pluralLabel>
    <recordTypes>
        <fullName>NEWTEST</fullName>
        <active>true</active>
        <label>NEWTEST</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewRecordType</fullName>
        <active>true</active>
        <label>NewRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NewValid</fullName>
        <active>false</active>
        <errorConditionFormula>$Label.kcs_dev__dx_api !=Null</errorConditionFormula>
        <errorDisplayField>New_Dte__c</errorDisplayField>
        <errorMessage>New Error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewValidation1</fullName>
        <active>false</active>
        <errorConditionFormula>$Label.kcs_dev__dx_api2 +$Label.kcs_dev__dx_api = Branch1_formula__c +                                                                  Branch1_formula__c+ &apos;$ObjectType.kcs_dev__A__c.Fields.kcs_dev__Email__c&apos; + &apos;$Permission.New_Permission&apos;+ &apos;$Setup.kcs_dev__Custom_Test1__c.kcs_dev__Checked__c &apos;</errorConditionFormula>
        <errorMessage>No Error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_VAlidta</fullName>
        <active>false</active>
        <errorConditionFormula>Branch1__r.Branch2__c  &lt;&gt; Null</errorConditionFormula>
        <errorMessage>NEW ERROR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NextValid</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Branch2__c)</errorConditionFormula>
        <errorMessage>nulll</errorMessage>
    </validationRules>
</CustomObject>